--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
+    "@types/twilio": "^3.19.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1",
     "ts-node-dev": "^2.0.0",
+    "twilio": "^4.11.1",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
