--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index.ts",
+    "dev": "npx nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc -p .",
+    "postinstall": "npm run build",
     "debug": "node --inspect -r ts-node/register ./index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "14.15.2",
+    "npm": "6.14.9"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "nodemon": "^2.0.22",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -18,8 +26,11 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "@types/twilio": "^3.19.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
@@ -27,11 +38,6 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1",
-    "ts-node-dev": "^2.0.0",
-    "twilio": "^4.11.1",
-    "typescript": "^5.0.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "twilio": "^4.11.1"
   }
 }
