--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "build": "tsc -p .",
     "postinstall": "npm run build",
-    "debug": "node --inspect -r ts-node/register ./index.ts",
+    "debug": "node --inspect -r ts-node/register src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
